Refactor PANTHER parser (+ tests)